2006-02-09  Sami Wagiaalla  <swagiaal@redhat.com>

	* glade/procpop.glade: Renamed "Creat Custom Observer"
	to "Edit Custom Observers"

2006-02-09  Phil Muldoon  <pmuldoon@redhat.com>

	* glade/procpop.glade: Removed Credits button.

	* glade/procpop.glade: Added About window.

2006-02-08  Phil Muldoon  <pmuldoon@redhat.com>
	
	* Gui.java: Add Messages import statement back.

	* Gui.java: Revert i8n.

2006-02-07  Sami Wagiaalla  <swagiaal@redhat.com>

	* Gui.java (gui): Added a call to 
	ObserverManager.theManager.save().

2006-02-06  Phil Muldoon  <pmuldoon@redhat.com>

	* glade/procpop.glade: Removed View and Edit menus.

	* glade/procpop.glade: Added File -> Close menu.

2006-02-06  Sami Wagiaalla  <swagiaal@redhat.com>

	* glade/procpop.glade: Removed 'Hold' button.

2006-02-05  Andrew Cagney  <cagney@redhat.com>

	* Gui.java: New file, split out the bulk of FryskGui.
	* FryskGui.java: Split into Gui.java.

	* FryskGui.java (FRYSK_CONFIG): Delete, use Config.FRYSK_DIR.

2006-02-04  Sami Wagiaalla  <swagiaal@redhat.com>

	* glade/procpop.glade: Added a dummy lable to ActionSettins.

2006-02-03  Sami Wagiaalla  <swagiaal@redhat.com>

	* test/TestPrototypeCopying.java: New file. Test for prototype
	copying.

2006-02-02  Adam Jocksch  <ajocksch@redhat.com>

	* FryskGui.java: Now sets the icon for the procpop window.

2006-01-31  Phil Muldoon  <pmuldoon@redhat.com>

	* FryskGui.java: Externalize Strings

2006-01-31  Adam Jocksch <ajocksch@redhat.com>
	
	* glade/frysk_source.glade: Re-added "MIXED" option to mode
	selector.

2006-01-30  Adam Jocksch <ajocksch@redhat.com>

	* glade/frysk_source.glade: Removed "MIXED" option from mode selector.

2006-01-27  Phil Muldoon  <pmuldoon@redhat.com>

	* FryskGui.java (mainGui): Add hideAll() to help with
	1924

2006-01-26  Phil Muldoon  <pmuldoon@redhat.com>

	* FryskGui.java (mainGui): Use errorDialog instead of
	warnDialog.

2006-01-26  Adam Jocksch  <ajocksch@redhat.com>
