@@ -1,3 +1,7 @@
+2006-02-09  Adam Jocksch  <ajocksch@redhat.com>
+
+	* images/SplashScreen.png: Added.
+
 2006-02-09  Sami Wagiaalla  <swagiaal@redhat.com>
 
 	* glade/procpop.glade: Renamed "Creat Custom Observer"
